Bug 13151 - staff marc preview not wrapping
The MARC preview available on the staff client detail page doesn't wrap
long lines of text because it uses a huge block of whitespace-formatted
text in a <pre> tag. The OPAC doesn't have this problem because the MARC
preview is formated in a table.

This patch copies the OPAC's "plainMARC.xsl" file for use in the staff
client. The preview modal has been converted to use Bootstrap following
the method used in Bug 12755

To test, apply the patch and clear your browser cache. View the
detail page for a bibliographic record in the staff client. Click the
link to show the MARC preview. Confirm that the modal looks correct,
works correctly, and adapts gracefully to different browser widths.

Confirm that the MARC preview and Card links still work from Z39.50
searches.

Note: This patch assumes that UNIMARC records display correctly using
xslt/plainMARC.xsl. Please let me know if that is wrong.


I confirm it works: nice modal dialog box; display aligned on opac display;
works also with Unimarc biblios.

--- a/koha-tmpl/intranet-tmpl/prog/en/css/staff-global.css
+++ b/koha-tmpl/intranet-tmpl/prog/en/css/staff-global.css
@@ -1724,6 +1724,13 @@ span.permissiondesc {
 	color: black;
 }
 
+#marcPreview table { border: 0; margin: .7em 0 0 0; font-family: monospace; font-size: 95%; }
+#marcPreview th { background-color : #FFF; border: 0; white-space: nowrap; text-align:left; vertical-align: top; padding: 2px; }
+#marcPreview td { border: 0; padding : 2px; vertical-align: top; }
+#marcPreview tbody tr:nth-child(2n+1) td { background-color: #FFF; }
+#marcPreview { width : 80%; margin-left : -40%; }
+@media (max-width: 767px) { #marcPreview { margin: 0; width : auto; } }
+
 #cartDetails {
 	background-color : #FFF;
 	border: 1px solid #739acf;
